{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 84,
  "lineage": "4dbf46d5-2621-29f9-b321-b91c34ad340f",
  "resources": [
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c7de9cc7b82c94",
            "arn": "arn:aws:ec2:us-east-1:211125355004:elastic-ip/eipalloc-091c7de9cc7b82c94",
            "association_id": "eipassoc-08a0555a122df6e39",
            "domain": "vpc",
            "id": "eipalloc-091c7de9cc7b82c94",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03f0f6e318d3477e0",
            "private_dns": "ip-10-0-10-124.ec2.internal",
            "private_ip": "10.0.10.124",
            "public_dns": "ec2-54-162-51-39.compute-1.amazonaws.com",
            "public_ip": "54.162.51.39",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07caf09b362be10b8",
            "arn": "arn:aws:ec2:us-east-1:211125355004:instance/i-031cd553e7fbe3b7a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031cd553e7fbe3b7a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027c0dbaadacd4f2c",
            "private_dns": "ip-10-0-10-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.101",
            "public_dns": "ec2-3-85-209-187.compute-1.amazonaws.com",
            "public_ip": "3.85.209.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0116ae7178aaa30e3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e38c6ac9df245bb4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043f5967194069e68",
            "tags": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e38c6ac9df245bb4"
            ]
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_security_group.web_sg",
            "module.autoscaling.module.networking.aws_subnet.public",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:internet-gateway/igw-00908d42bef4ead83",
            "id": "igw-00908d42bef4ead83",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-igw"
            },
            "tags_all": {
              "Name": "my-project-igw"
            },
            "vpc_id": "vpc-07ebaf581161f940a"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125355004:loadbalancer/app/dev-alb/9f1076ab64404c83",
            "arn_suffix": "app/dev-alb/9f1076ab64404c83",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-1235762848.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125355004:loadbalancer/app/dev-alb/9f1076ab64404c83",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e38c6ac9df245bb4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01922e57bc120634e"
              },
              {
                "subnet_id": "subnet-043f5967194069e68"
              },
              {
                "subnet_id": "subnet-0d71afb994b6434a2"
              }
            ],
            "subnets": [
              "subnet-01922e57bc120634e",
              "subnet-043f5967194069e68",
              "subnet-0d71afb994b6434a2"
            ],
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-07ebaf581161f940a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_security_group.web_sg",
            "module.autoscaling.module.networking.aws_subnet.public",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-091c7de9cc7b82c94",
            "association_id": "eipassoc-08a0555a122df6e39",
            "connectivity_type": "public",
            "id": "nat-0c3ef90992f8e9c8b",
            "network_interface_id": "eni-03f0f6e318d3477e0",
            "private_ip": "10.0.10.124",
            "public_ip": "54.162.51.39",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-043f5967194069e68",
            "tags": {
              "Name": "my-project-NAT-gw"
            },
            "tags_all": {
              "Name": "my-project-NAT-gw"
            }
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_eip.nat",
            "module.autoscaling.module.networking.aws_subnet.public",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:route-table/rtb-096e4812fbcb0d3e2",
            "id": "rtb-096e4812fbcb0d3e2",
            "owner_id": "211125355004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-project-private-route-table"
            },
            "tags_all": {
              "Name": "my-project-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ebaf581161f940a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fa7d0c4861a31da",
            "route_table_id": "rtb-096e4812fbcb0d3e2",
            "subnet_id": "subnet-05a5e4b616bd3ffa0"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_route_table.private",
            "module.autoscaling.module.networking.aws_subnet.private",
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:security-group/sg-0e38c6ac9df245bb4",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e38c6ac9df245bb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-project-web-sg",
            "name_prefix": "",
            "owner_id": "211125355004",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07ebaf581161f940a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling.module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-05a5e4b616bd3ffa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a5e4b616bd3ffa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-private-subnet"
            },
            "tags_all": {
              "Name": "my-project-private-subnet"
            },
            "vpc_id": "vpc-07ebaf581161f940a"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-043f5967194069e68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043f5967194069e68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-07ebaf581161f940a"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-0d71afb994b6434a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d71afb994b6434a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-07ebaf581161f940a"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-01922e57bc120634e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01922e57bc120634e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-07ebaf581161f940a"
          },
          "dependencies": [
            "module.autoscaling.module.networking.aws_vpc.vpc",
            "module.autoscaling.module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling.module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:vpc/vpc-07ebaf581161f940a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c6881244c5cf6832",
            "default_route_table_id": "rtb-09206dacb06116ae6",
            "default_security_group_id": "sg-0268846d67ce63146",
            "dhcp_options_id": "dopt-091fa171af1c13b04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ebaf581161f940a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09206dacb06116ae6",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-vpc"
            },
            "tags_all": {
              "Name": "my-project-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071698e05d898895a",
            "arn": "arn:aws:ec2:us-east-1:211125355004:elastic-ip/eipalloc-071698e05d898895a",
            "association_id": "eipassoc-0f5a21be75bb2aaea",
            "domain": "vpc",
            "id": "eipalloc-071698e05d898895a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e9f124b809deeb78",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_ip": "10.0.1.125",
            "public_dns": "ec2-44-217-62-240.compute-1.amazonaws.com",
            "public_ip": "44.217.62.240",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07caf09b362be10b8",
            "arn": "arn:aws:ec2:us-east-1:211125355004:instance/i-0dcbb7371a398d487",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dcbb7371a398d487",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b87acb9d79fc58b",
            "private_dns": "ip-10-0-10-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.11",
            "public_dns": "ec2-54-160-153-107.compute-1.amazonaws.com",
            "public_ip": "54.160.153.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-018d8c814d89c47e2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0e057d9b815178bcf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057def43acdbd0608",
            "tags": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e057d9b815178bcf"
            ]
          },
          "dependencies": [
            "module.networking.aws_security_group.web_sg",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:internet-gateway/igw-0f06ad8917a4b3d25",
            "id": "igw-0f06ad8917a4b3d25",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-igw"
            },
            "tags_all": {
              "Name": "my-project-igw"
            },
            "vpc_id": "vpc-067aff8a9f40fab6f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071698e05d898895a",
            "association_id": "eipassoc-0fc3f34dd1e515224",
            "connectivity_type": "public",
            "id": "nat-08eddc498a00bee35",
            "network_interface_id": "eni-0ffdc1d410e2436bf",
            "private_ip": "10.0.10.75",
            "public_ip": "44.217.62.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-057def43acdbd0608",
            "tags": {
              "Name": "my-project-NAT-gw"
            },
            "tags_all": {
              "Name": "my-project-NAT-gw"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:route-table/rtb-0f8c4536e7772d73e",
            "id": "rtb-0f8c4536e7772d73e",
            "owner_id": "211125355004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-project-private-route-table"
            },
            "tags_all": {
              "Name": "my-project-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-067aff8a9f40fab6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a71a60fbdae6789f",
            "route_table_id": "rtb-0f8c4536e7772d73e",
            "subnet_id": "subnet-008840a2e11cd501d"
          },
          "dependencies": [
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:security-group/sg-0e057d9b815178bcf",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e057d9b815178bcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-project-web-sg",
            "name_prefix": "",
            "owner_id": "211125355004",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-067aff8a9f40fab6f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-008840a2e11cd501d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008840a2e11cd501d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-private-subnet"
            },
            "tags_all": {
              "Name": "my-project-private-subnet"
            },
            "vpc_id": "vpc-067aff8a9f40fab6f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-057def43acdbd0608",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057def43acdbd0608",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-067aff8a9f40fab6f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-03a9c4d4a6ece2bcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a9c4d4a6ece2bcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-067aff8a9f40fab6f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-04418cbdbdc4f14b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04418cbdbdc4f14b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-067aff8a9f40fab6f"
          },
          "dependencies": [
            "module.networking.aws_vpc.vpc",
            "module.networking.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:vpc/vpc-067aff8a9f40fab6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012cbafc29399586b",
            "default_route_table_id": "rtb-0fec3caaacf1b58e2",
            "default_security_group_id": "sg-05d099c33b5716857",
            "dhcp_options_id": "dopt-091fa171af1c13b04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067aff8a9f40fab6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fec3caaacf1b58e2",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-vpc"
            },
            "tags_all": {
              "Name": "my-project-vpc"
            }
          }
        }
      ]
    }
  ]
}